spacing fix

--- a/style/stylesheets/mining.less
+++ b/style/stylesheets/mining.less
@@ -28,8 +28,7 @@
 
 .miner-control{
     text-align:right;
-    margin-right:20px;
-    margin-left:20px;
+    margin:20px;
     color:@g600;
 }
 .miner-control .display{
